# comfyui-all-on-one-image-generation-node

./: .gitignore  CHANGELOG.md  LICENSE  MANAGED_PROMPT_PRIVACY_CUTOVER.md  README.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  requirements.txt
adapters/: __init__.py  base.py  flux2_klein_9b.py  ideogram4.py  krea2.py  z_image_turbo.py
examples/: flux2_klein_9b_basic.json  z_image_turbo_basic.json
loaders/: __init__.py  gguf_backend.py  safetensors_backend.py
nodes/: __init__.py  aio_generate.py  flux2_klein_settings.py  ideogram4_prompt_builder.py  ideogram4_settings.py  info.py  inpaint.py  krea2_settings.py  lora_configuration.py  pipeline_models.py  z_image_settings.py
routes/: __init__.py  ideogram4_prompt_library.py  privacy.py
services/: __init__.py  dimensions.py  ideogram4_prompt_builder.py  ideogram4_prompt_library.py  inpaint.py  krea2_enhancer.py  krea2_rebalance.py  lora_application.py  lora_info.py  managed_builder_privacy.py  managed_mode_transition.py  managed_privacy_execution.py  managed_prompt_library_privacy.py  managed_prompt_privacy.py  managed_run_info_privacy.py  model_resolution.py  performance.py  pipeline.py  privacy.py  profiles.py  progress.py  prompt_resolution.py  reference_inputs.py  registry.py  run_info.py  validation.py
tests/: conftest.py  test_adapter_generation.py  test_aio_generate_node.py  test_dimensions.py  test_gguf_backend.py  test_helto_theme_js.py  test_ideogram4_prompt_builder.py  test_ideogram4_prompt_library.py  test_import.py  test_inpaint.py  test_input_tooltips.py  test_krea2_enhancer.py  test_krea2_rebalance.py  test_lora_application.py  test_lora_config.py  test_lora_info.py  test_lora_info_markup_js.py  test_managed_privacy_activation.py  test_managed_prompt_privacy.py  test_managed_prompt_privacy_js.py  test_performance.py  test_pipeline.py  test_pipeline_models.py  test_privacy.py  test_privacy_recovery_js.py  test_profiles.py  test_progress.py  test_reference_inputs.py  test_registry.py  test_run_info.py  test_safetensors_backend.py  (+3 more)
(+15 files in other folders)
