[project]
name = "comfyui-helto-image-gen-all-in-one"
version = "0.1.0"
description = "Helto all-in-one ComfyUI image generation nodes with managed privacy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "helto-privacy @ git+https://github.com/helto4real/helto-privacy.git@4015b8307df29a6b6d69ab3c60c4347ef190b719",
]
license = "GPL-3.0-only"

[project.urls]
Repository = "https://github.com/helto4real/comfyui-all-on-one-image-generation-node"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "helto"
DisplayName = "AIO Image Generate"
Icon = ""
web = "web"
