[project]
name = "comfyui-all-on-one-image-generation-node"
version = "0.1.0"
description = "Helto all-in-one ComfyUI image generation nodes with managed privacy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "helto-privacy @ git+https://github.com/helto4real/helto-privacy.git@2e85c71f9aa22bd47ee6f13f2add83d111ab4591",
]
license = "GPL-3.0-only"

[project.urls]
Repository = "https://github.com/helto4real/comfyui-all-on-one-image-generation-node"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "helto"
DisplayName = "AIO Image Generate"
Icon = ""
web = "web"
